--- a/utamihon.html
+++ b/utamihon.html
@@ -60,7 +60,7 @@ body{
 }
 
 /* リンクとテキスト */
-a{color:#704f2a; text-decoration:underline}
+a{color:#FF91AF; text-decoration:underline}
 a:hover{opacity:.85}
 h2,h3{margin:0; font-weight:700}
 h3{font-size:14px; color:#6b635b}
@@ -153,7 +153,7 @@ URLは既に音源化できているものですので、<span style="color: #e9
 悪ノ召使<br/>
 <a href="https://www.youtube.com/watch?v=SCqZNTMqJGw">悪魔の踊り方</a><br/>
 <a href="https://www.youtube.com/watch?v=lutbIuaDy6Y">明け星</a><br/>
-アザレアの亡霊<br/>
+<a href="https://www.youtube.com/watch?v=QWHad8AnobE">アザレアの亡霊<br/>
 アストロノーツ<br/>
 アスノヨゾラ哨戒班<br/>
 <a href="https://www.youtube.com/watch?v=ZOziwVQmAeU">あだぽしゃ</a><br/>
@@ -815,6 +815,7 @@ BREAK<br/>
 <a href="https://soundcloud.com/not-sotomine/boku-boku">Boku-boku β</a><br/>
 <a href="https://www.youtube.com/watch?v=XvicMJZ2e88">Calc.</a><br/>
 <a href="https://www.youtube.com/watch?v=hIbflJrEQPA">Catchy!?</a><br/>
+Choose Me
 <a href="https://www.youtube.com/watch?v=yNSGC2VbW38">Credens Justitiam</a><br/>
 <a href="https://www.youtube.com/watch?v=7GaX7jMtSyk">Colorful</a><br/>
 <a href="https://www.youtube.com/watch?v=P5kQuVmrhaM">Colorful world</a><br/>
@@ -853,6 +854,7 @@ into the New World<br/>
 <a href="https://www.youtube.com/watch?v=qZrk9Xc-Xtw">KING</a><br/>
 kiss<br/>
 <a href="https://www.youtube.com/watch?v=f1dO_H4VkFg">Komm, süsser Tod</a><br/>
+Jane Doe<br/>
 <a href="https://www.youtube.com/watch?v=R3TYN9PdcmU">Journey</a><br/>
 <a href="https://www.youtube.com/watch?v=Q2sqrnDMtW0">JUMPIN’ OVER !</a><br/>
 just be friends<br/>
@@ -903,7 +905,7 @@ START:DASH!!<br/>
 <a href="https://www.youtube.com/watch?v=83bdTyEXLr8">SToRY</a><br/>
 Sugar Sweet Nightmare<br/>
 <a href="https://www.youtube.com/watch?v=1DC6uhjDScw">Summering</a><br/>
-SUNNY DAY SONG
+SUNNY DAY SONG<br/>
 Surges<br/>
 Sweet Devil<br/>
 <a href="https://www.youtube.com/watch?v=uVsEIwo8I7U">Tell Your World</a><a href="https://www.youtube.com/watch?v=8Cp8hyhXj7g"（MMD）</a><br/>
