--- a/lespectre.html
+++ b/lespectre.html
@@ -117,7 +117,7 @@ main::after{
 /* Fluorescent：印刷系の蛍光など “番号はあるが通称名なし” 想定 */
 const fluorescent = [
   {name:"Tomori", hex:"#F0C063", meta:"PANTONE P 14-6 C (Unnamed)", memo:"この街のお茶の色。"},
-  {name:"(Unnamed)", hex:"#00F5A0", meta:"Fluorescent Green (Unnamed)", memo:"仮HEX／スポイト差し替え前。"}
+  {name:"Rosehip", hex:"#BB1237", meta:"PANTONE 18-1761 TCX (Unnamed)", memo:"花に水、赤のお茶。"},
 ];
 
 /* Carrè：広場（名称不在や俗称のみ） */
