--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -223,15 +223,15 @@ const milk = [
   {name:"Oat Milk",hex:"#CEC4BA",meta:"PANTONE 13-0003 TCX",memo:"雨の窓と本の紙。"},
   {name:"Almond Milk",hex:"#E7E2DA",pantone:"PANTONE 12-4301 TCX",memo:"音のしないやさしさ。"},
   {name:"Cappuccino Foam",hex:"#F6F3E8",meta:"PANTONE 11-0109 TSX",memo:"ほろ苦さに浮かぶ泡のヘイロー。"},
+  {name:"Meringue",hex:"#F4EEDC",pantone:"PANTONE 11-0503 TCX",memo:"空気の比率が多い甘さ。"},
+  {name:"Marshmallow",hex:"#F1EDE5",pantone:"PANTONE 11-4300 TCX",memo:"優しさの詰め合わせ。"},
+  {name:"Peach Mousse",hex:"#FFCDB5",meta:"PANTONE 12-1121 TCX",memo:"優しさのこもった泡立て。"},
+  {name:"Royal Milk Tea",hex:"#CDB7A0",meta:"RGB(205,183,160)",memo:"王冠ではなくブランケット。"},
   {name:"Caramel Cream",hex:"#F4BA94",pantone:"PANTONE 13-1022 TCX",memo:"天井の明かりは飴色。"},
   {name:"Irish Cream",hex:"#C0AB92",meta:"PANTONE 14-1208 TCX",memo:"遠くから包んでくるぬくもり。"}, 
   {name:"Almond Cream",hex:"#F4C29F",meta:"PANTONE 13-1017 TCX",memo:"上に乗る甘さ。"},
   {name:"Buttercream",hex:"#EFE3C6",pantone:"PANTONE 11-0110 TCX",memo:"横たわる陽だまり。"},
   {name:"Cannoli Cream",hex:"#E7E4D2",meta:"PANTONE 11-4302 TCX",memo:"ミルクたっぷりの時間。"},
-  {name:"Meringue",hex:"#F4EEDC",pantone:"PANTONE 11-0503 TCX",memo:"空気の比率が多い甘さ。"},
-  {name:"Mocha Meringue",hex:"#BFA18B",pantone:"PANTONE 16-1211 TCX",memo:"軽くて、少しだけ苦い。"},
-  {name:"Marshmallow",hex:"#F1EDE5",pantone:"PANTONE 11-4300 TCX",memo:"優しさの詰め合わせ。"},
-  {name:"Royal Milk Tea",hex:"#CDB7A0",meta:"RGB(205,183,160)",memo:"王冠ではなくブランケット。"},
   {name:"Vanilla Cream",hex:"#F5D8C6",meta:"PANTONE 12-1009 TCX",memo:"曇りの日の白。"},
   {name:"Strawberry Cream",hex:"#F3C3C3",meta:"PANTONE 13-2005 TCX",memo:"可愛さの塗り方。"},
   {name:"Cloud Cream",hex:"#E7DDC5",pantone:"PANTONE 12-0804 TCX",memo:"雨雲の白に落ちる。"}
@@ -251,6 +251,7 @@ const choco = [
   {name:"Bitter Chocolate",hex:"#503130",meta:"PANTONE 19-1317 TCX",memo:"やさしくない優しさ。"},
   {name:"Decadent Chocolate",hex:"#513235",meta:"PANTONE 19-1625 TCX",memo:"深く潜れる甘さ。"},
   {name:"Mocha Bisque",hex:"#8C543A",meta:"PANTONE 18-1140 TCX",memo:"午後三時、窓辺の粉砂糖。"},
+  {name:"Mocha Meringue",hex:"#BFA18B",pantone:"PANTONE 16-1211 TCX",memo:"軽くて、少しだけ苦い。"},
   {name:"Mocha Mousse",hex:"#A47864",meta:"PANTONE 17-1230 TCX",memo:"人肌に近い甘さ。"},
   {name:"Fondue Fudge",hex:"#5E4336",pantone:"PANTONE 19-1224 TCX",memo:"影にも甘さは宿るよ。"},
   {name:"Toffee",hex:"#755139",pantone:"PANTONE 18-1031 TCX",memo:"降り注ぐ甘さ。"},
@@ -282,11 +283,13 @@ const ice = [
   {name:"Cherry Blossom",hex:"#F7CEE0",meta:"PANTONE 13-3207 TCX",memo:"お馴染みの春色。"},
   {name:"Caramel", hex:"#C37C54", meta:"PANTONE 16-1439 TCX", memo:"甘みの塊。"},
   {name:"Lollipop",hex:"#BB1A36",meta:"PANTONE 18-1764 TCX",memo:"思い出に残ってるあの味。"},
+  {name:"Bonbon",hex:"#E09BBD",meta:"PANTONE 15-2213 TCX",memo:"一口一口違う甘さを。"},
   {name:"Sugar Swizzle",hex:"#F4EEE8",pantone:"PANTONE 11-0607 TCX",memo:"甘さの輝きが星のよう。"},
   {name:"Rum Raisin", hex:"#583432", meta:"PANTONE 19-1321 TCX", memo:"冷んやりした大人の味。"},
   {name:"Grape Compote",hex:"#63516D",meta:"PANTONE 18-3513 TCX",memo:"その「み」を煮込んだ先には。"},
   {name:"Pink Lemonade",hex:"#DB6580",meta:"PANTONE 16-1735 TCX",memo:"ピンクってだけで少し特別になる。"},
   {name:"Peach Nectar",hex:"#EBA790",meta:"PANTONE 14-1228 TCX",memo:"神の飲み物と言われるほどの味でしょう。"},
+  {name:"Peach Melba",hex:"#E8AFA2",meta:"PANTONE 14-1418 TCX",memo:"違う甘さで勝負します。"},
   {name:"Peach Parfait",hex:"#FCC2AC",pantone:"PANTONE 14-1219 TCX",memo:"完璧な桃味のやさしさ。"}
 ];
 
@@ -303,6 +306,7 @@ const dessert = [
   {name:"Tiramisu",hex:"#7A4E3A",pantone:"PANTONE 19-1233 TCX",memo:"層の影が甘い。"},
   {name:"Ganache",hex:"#33292A",pantone:"PANTONE 19-1018 TCX",memo:"重く、静かに艶がある。"},
   {name:"Pink Flambé",hex:"#C34A70",meta:"PANTONE 18-2133 TCX",memo:"燃やす勢いが素敵な味になるんだって。"},
+  {name:"Pink Taffy",hex:"#FF92AF",meta:"PANTONE 14-1816 TCX",memo:"噛みしめる甘さ。"},
   {name:"Red Velvet",hex:"#7F2A3C",pantone:"PANTONE 18-1935 TSX",memo:"その気高い輝きは赤く。"},
   {name:"Pecan Pie",hex:"#7B5947",meta:"PANTONE 18-1125 TCX",memo:"分け与える香ばしさ。"},
   {name:"Peach Pie",hex:"#FFA88B",meta:"PANTONE 14-1325 TSX",memo:"一かけらのお昼。"},
