--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -259,7 +259,10 @@ const choco = [
 ];
 
 const tea = [
+  {name:"Tea",hex:"#999B85",meta:"PANTONE 16-0213 TCX",memo:"一休みと若干の苦み。"},
+  {name:"Green Tea",hex:"#86A96F",meta:"PANTONE 15-6428 TCX",memo:"きっと一番ポピュラーな緑。"},
   {name:"Matcha",hex:"#9CAF88",meta:"RGB(156,175,136)",memo:"深呼吸みたいな緑。"},
+  {name:"Jasmine Green",hex:"#7FC844",meta:"PANTONE 15-0545 TCX",memo:"気休めの黄緑一杯。"},
   {name:"Herbal Garden",hex:"#9CAD60",meta:"PANTONE 15-0336 TCX",memo:"本当にありそうなお茶の名前。"},  
   {name:"Peppermint",hex:"#619364",meta:"PANTONE 16-6329 TCX",memo:"一杯でスッキリ解ける夜のわだかまり。"},
   {name:"Chai Tea",hex:"#B58C6C",meta:"PANTONE 17-0949 TCX",memo:"スパイスが喉で灯る。"},
