--- a/flepaix.html
+++ b/flepaix.html
@@ -168,7 +168,7 @@ const SHAPE_BY_CATEGORY = {
   milk:    "tumbler",
   cosmic:  "tumbler",
   cocktail:"wine",
-  dessert: "parfait" // dessert uses parfait glass now
+  dessert: "parfait"
 };
 
 // Sample data
@@ -179,8 +179,8 @@ const DRINKS = [
   { category:"tea",     name:"Tomori",      hex:"#F0C063", memo:"この街のお茶。" },
   { category:"tea",     name:"Hibiscus",    hex:"#DD3848", memo:"真夏の鮮やかで甘い花。" },
   { category:"tea",     name:"Rosehip",     hex:"#BB1237", memo:"花に水、赤のお茶。" },
+  { category:"cocktail",name:"Cosmopolitan",   hex:"#FF7276", memo:"宇宙の都に名前は付けられないね。" },
   { category:"dessert", name:"Panna Rosa",  hex:"#FFC7D9", memo:"ピンクのデザート" },
-  { category:"cocktail",name:"Pink Fizz",   hex:"#ff91af", memo:"Baker-Miller Pink" },
   { category:"cosmic",  name:"Stellar Ice", hex:"#7AD0D6", memo:"宇宙色のソーダ" },
   { category:"dessert", name:"Strawberry Parfait", hex:"#FFD3E8", memo:"クリームといちごの層" }
 ];
