--- a/flepaix.html
+++ b/flepaix.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Fleur de Paix — fixed parfait wiring</title>
+<title>Fleur de Paix</title>
 <style>
 /* ===== Theme (dark, no bg effects) ===== */
 :root{
