--- a/flepaix.html
+++ b/flepaix.html
@@ -174,15 +174,15 @@ const SHAPE_BY_CATEGORY = {
 // Sample data
 const DRINKS = [
   { category:"coffee",  name:"Espresso",    hex:"#3B2F2F", memo:"深煎り・短時間抽出" },
-  { category:"milk",    name:"Milk Soda",   hex:"#B8E9FF", memo:"炭酸のパチパチ" },
-  { category:"choco",   name:"Cacao 70",    hex:"#4C2A1F", memo:"ビター寄り" },
+  { category:"milk",    name:"Cosmic Latte",   hex:"#FFF8E7", memo:"宇宙の平均色" },
+  { category:"choco",   name:"Cioccolata",    hex:"#683722", memo:"チョコレートという概念" },
   { category:"tea",     name:"Tomori",      hex:"#F0C063", memo:"この街のお茶。" },
   { category:"tea",     name:"Hibiscus",    hex:"#DD3848", memo:"真夏の鮮やかで甘い花。" },
   { category:"tea",     name:"Rosehip",     hex:"#BB1237", memo:"花に水、赤のお茶。" },
   { category:"cocktail",name:"Cosmopolitan",   hex:"#FF7276", memo:"宇宙の都に名前は付けられないね。" },
-  { category:"dessert", name:"Panna Rosa",  hex:"#FFC7D9", memo:"ピンクのデザート" },
-  { category:"cosmic",  name:"Stellar Ice", hex:"#7AD0D6", memo:"宇宙色のソーダ" },
-  { category:"dessert", name:"Strawberry Parfait", hex:"#FFD3E8", memo:"クリームといちごの層" }
+  { category:"cocktail", name:"Conceptea",  hex:"#e8ecef", memo:"フレパオリジナルのシグニチャードリンク" },
+  { category:"cosmic",  name:"Serenity", hex:"#92a8d1", memo:"いっぱいの安らぎ" },
+  { category:"dessert", name:"Cherry-Hibiscus Sweetea", hex:"#84172C", memo:"ハイビスカスとチェリーのブレンドティー" }
 ];
 
 // DOM
