--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -323,14 +323,13 @@ const coffee = [
   {name:"Coffee Bean", hex:"#40312F", meta:"PANTONE 19-0915 TCX", memo:"掌の豆、土の匂い。"},
   {name:"Chicory Coffee", hex:"#4A342E", meta:"PANTONE 19-1419 TCX", memo:"古い本のページみたいな香り。"},
   {name:"Turkish Coffee", hex:"#483F39", meta:"PANTONE 19-0812 TCX", memo:"濃く、ゆっくり、底に月。"},
-  {name:"Irish Coffee", hex:"#5A3E36", meta:"RGB(90,62,54)", memo:"ウイスキーの余韻、頬の熱。"},
   {name:"Americano",hex:"#6B4A33",pantone:"PANTONE 18-1048 TCX",memo:"薄めたのは苦味ではなく距離。"},
   {name:"Java",hex:"#433431",meta:"PANTONE 19-1016 TCX",memo:"遠い島の煙い朝。"},
   {name:"French Roast",hex:"#58423F",meta:"PANTONE 19-1012 TCX",memo:"深煎りは言葉少なめ。"},
   {name:"Frappé",hex:"#C1A994",meta:"PANTONE 14-1212 TCX",memo:"冷たさで眠気を冷まそう。"},
   {name:"Café Noir",hex:"#4B3621",meta:"RGB(75,54,33)",memo:"看板の灯りが消えたあと。"},
   {name:"Café au Lait",hex:"#AE8774",meta:"PANTONE 17-1227 TCX",memo:"午後の日差しとミルクタイム。"},
-  {name:"Café Crème",hex:"#98714F",meta:"RGB(152,113,79)",memo:"やわらかな苦味に包まれて。"},
+  {name:"Café Crème",hex:"#C79685",meta:"PANTONE 16-1220 TCX",memo:"やわらかな苦味に包まれて。"},
   {name:"Lattè",hex:"#C5A582",meta:"PANTONE 15-1220 TCX",memo:"泡の斜面が静かに沈む。"},
   {name:"Affogato",hex:"#A98B71",meta:"PANTONE 17-1220 TSX",memo:"溶けかけの月に夜が落ちる。"},
   {name:"Macchiato",hex:"#B09079",pantone:"PANTONE 17-1221 TCX",memo:"点のミルク、焦げた砂糖。"},
@@ -346,7 +345,6 @@ const milk = [
   {name:"Meringue",hex:"#F4EEDC",pantone:"PANTONE 11-0503 TCX",memo:"空気の比率が多い甘さ。"},
   {name:"Marshmallow",hex:"#F1EDE5",pantone:"PANTONE 11-4300 TCX",memo:"優しさの詰め合わせ。"},
   {name:"Peach Mousse",hex:"#FFCDB5",meta:"PANTONE 12-1121 TCX",memo:"優しさのこもった泡立て。"},
-  {name:"Royal Milk Tea",hex:"#CDB7A0",meta:"RGB(205,183,160)",memo:"王冠ではなくブランケット。"},
   {name:"Caramel Cream",hex:"#F4BA94",pantone:"PANTONE 13-1022 TCX",memo:"天井の明かりは飴色。"},
   {name:"Irish Cream",hex:"#C0AB92",meta:"PANTONE 14-1208 TCX",memo:"遠くから包んでくるぬくもり。"}, 
   {name:"Almond Cream",hex:"#F4C29F",meta:"PANTONE 13-1017 TCX",memo:"上に乗る甘さ。"},
@@ -374,8 +372,7 @@ const choco = [
   {name:"Mocha Meringue",hex:"#BFA18B",pantone:"PANTONE 16-1211 TCX",memo:"軽くて、少しだけ苦い。"},
   {name:"Mocha Mousse",hex:"#A47864",meta:"PANTONE 17-1230 TCX",memo:"人肌に近い甘さ。"},
   {name:"Fondue Fudge",hex:"#5E4336",pantone:"PANTONE 19-1224 TCX",memo:"影にも甘さは宿るよ。"},
-  {name:"Toffee",hex:"#755139",pantone:"PANTONE 18-1031 TCX",memo:"降り注ぐ甘さ。"},
-  {name:"Cioccolata",hex:"#683722",meta:"RGB(104,55,34)",memo:"濃厚なチョコ。"}
+  {name:"Toffee",hex:"#755139",pantone:"PANTONE 18-1031 TCX",memo:"降り注ぐ甘さ。"}
 ];
 
 const tea = [
