Update drink categories and add new items

--- a/flepaix.html
+++ b/flepaix.html
@@ -163,24 +163,27 @@ body{
 // Shapes per category
 const SHAPE_BY_CATEGORY = {
   coffee:  "mug",
-  choco:   "mug",
+  choco:   "tumbler",
   tea:     "teacup",
-  milk:    "tumbler",
-  cosmic:  "tumbler",
+  milk:    "mug",
+  cosmic:  "wine",
   cocktail:"wine",
   dessert: "parfait"
 };
 
 // Sample data
 const DRINKS = [
-  { category:"coffee",  name:"Espresso",    hex:"#3B2F2F", memo:"深煎り・短時間抽出" },
+  { category:"coffee",  name:"Blend Espresso",    hex:"#3B2F2F", memo:"ほのかにりんごの香りがする" },
+  { category:"coffee",  name:"Irish Coffee", hex:"#5F3D26",  memo:"ウイスキーの余韻、頬の熱。"},
   { category:"milk",    name:"Cosmic Latte",   hex:"#FFF8E7", memo:"宇宙の平均色" },
+  { category:"milk",    name:"Royal Milk Tea", hex:"#CDB7A0",  memo:"王冠ではなくブランケット。"},
   { category:"choco",   name:"Cioccolata",    hex:"#683722", memo:"チョコレートという概念" },
-  { category:"tea",     name:"Tomori",      hex:"#F0C063", memo:"この街のお茶。" },
-  { category:"tea",     name:"Hibiscus",    hex:"#DD3848", memo:"真夏の鮮やかで甘い花。" },
-  { category:"tea",     name:"Rosehip",     hex:"#BB1237", memo:"花に水、赤のお茶。" },
+  { category:"tea",     name:"ともり",      hex:"#F0C063", memo:"この街のお茶。" },
+  { category:"tea",     name:"ハイビスカス",    hex:"#DD3848", memo:"真夏の鮮やかで甘い花。" },
+  { category:"tea",     name:"ローズヒップ",     hex:"#BB1237", memo:"花に水、赤のお茶。" },
+  { category:"tea",  name:"月美草", hex:"#F8FCFF", memo:"いっぱいの安らぎ" },
   { category:"cocktail",name:"Cosmopolitan",   hex:"#FF7276", memo:"宇宙の都に名前は付けられないね。" },
-  { category:"cocktail", name:"Conceptea",  hex:"#e8ecef", memo:"フレパオリジナルのシグニチャードリンク" },
+  { category:"cosmic", name:"コンセプティー：Conceptea",  hex:"#e8ecef", memo:"フレパオリジナルのシグニチャードリンク" },
   { category:"cosmic",  name:"Serenity", hex:"#92a8d1", memo:"いっぱいの安らぎ" },
   { category:"dessert", name:"Cherry-Hibiscus Sweetea", hex:"#84172C", memo:"ハイビスカスとチェリーのブレンドティー" }
 ];
