--- a/20230210.html
+++ b/20230210.html
@@ -107,6 +107,7 @@
         "概念": "名前をつけた時点で、それはもう別物になってる",
         "時代": "流れているんじゃない、積み重なっているんだよ。君にどう見えるかは大事じゃない",
         "はてな": "はて……それは誰のことかな？",
+        "レテ": "レテ……忘れ物があるのかい？",
         "箱": "どれが本物かなんて、最初から何一つ決まってないよ"
     };
 
@@ -145,4 +146,5 @@
 
 </body>
 </html>
+
 
