Revise access.html with new card design and image
Updated the card layout and added an image to the access page.

--- a/access.html
+++ b/access.html
@@ -10,8 +10,18 @@
   <div id="header"></div>
   <main id="main">
     <h1>アクセス</h1>
-    <div class="panel">
-      <div class="card" style="height:220px;display:flex;align-items:center;justify-content:center;background:linear-gradient(0deg,#eef3f8,#fafcff)">地図を書き直しています……</div>
+<div class="panel">
+  <div class="card" style="
+      height:220px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      background:#fff;
+      overflow:hidden; /* ← 角丸に沿って画像を切る領域 */
+  ">
+    <img src="image/map.png" style="width:100%; height:100%; object-fit:cover;">
+  </div>
+</div>
       <p><a href="https://youtube.com/@gaine_0">住所：漆谷県江縫栄市北司零寺2-1-1</a><br>「江縫栄市立総合病院前」駅徒歩2分。駐車場200台。</p>
       <p class="note">カフェ「Café Palette」江縫栄市立総合病院店。<a href="https://gainenull.org/cafepalette">URL</a></p>
     </div>
