--- a/access.html
+++ b/access.html
@@ -12,14 +12,14 @@
     <h1>アクセス</h1>
 <div class="panel">
   <div class="card" style="
-      height:220px;
+      height:560px;
       display:flex;
       align-items:center;
       justify-content:center;
       background:#fff;
       overflow:hidden; /* ← 角丸に沿って画像を切る領域 */
   ">
-    <img src="image/map.png" style="width:100%; height:100%; object-fit:cover;">
+    <img src="image/map2.png" style="width:100%; height:100%; object-fit:cover;">
   </div>
 </div>
       <p><a href="https://youtube.com/@gaine_0">住所：漆谷県江縫栄市北司零寺2-1-1</a><br>「江縫栄市立総合病院前」駅徒歩2分。駐車場200台。</p>
