Update background image path in access.html

--- a/access.html
+++ b/access.html
@@ -61,7 +61,7 @@
   border: none;
   border-radius: 50%;
   background:
-    url("Mappin.png") center/contain no-repeat;
+    url("image/mappin.png") center/contain no-repeat;
   background-color: transparent;
   cursor: pointer;
 }
