--- a/access.html
+++ b/access.html
@@ -46,8 +46,8 @@
     /* ノイズ発動用のピンボタン */
     .map-pin {
       position: absolute;
-      top: 52px;   /* ← 病院ピンに合わせて微調整してね */
-      left: 140px; /* ← ここも */
+      top: 50px;   /* ← 病院ピンに合わせて微調整してね */
+      left: 110px; /* ← ここも */
       width: 32px;
       height: 32px;
       padding: 0;
@@ -60,7 +60,7 @@
       box-shadow: 0 0 0 3px #fff, 0 2px 4px rgba(0,0,0,0.25);
 
       /* ピン画像があるならここを書き換え */
-      background-image: url("image/hospital-pin.png");
+      background-image: url("image/mappin.png");
       background-position: center;
       background-repeat: no-repeat;
       background-size: contain;
